# portfolio

./: .gitignore  Cargo.toml  Trunk.toml  devenv.nix  index.css  index.html  package-lock.json  rust-analyzer.toml  test.md
.github/workflows/: gh-pages-deploy.yml
examples/: main.rs
public/: about.md  blog.md  cv.md
src/: app.rs
style/: tailwind.css
